@@ -6,10 +6,11 @@
  * and is available at http://www.eclipse.org/legal/epl-v10.html
  */
 
-package io.lighty.gnmi.southbound.device;
+package org.opendaylight.gnmi.southbound.device;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -20,53 +21,42 @@ import com.google.common.util.concurrent.Futures;
 import com.google.common.util.concurrent.ListenableFuture;
 import io.grpc.ConnectivityState;
 import io.grpc.ManagedChannel;
-import io.lighty.aaa.encrypt.service.impl.AAAEncryptionServiceImpl;
-import io.lighty.gnmi.southbound.device.connection.DeviceConnection;
-import io.lighty.gnmi.southbound.device.connection.DeviceConnectionInitializer;
-import io.lighty.gnmi.southbound.device.session.security.KeystoreGnmiSecurityProvider;
-import io.lighty.gnmi.southbound.schema.certstore.impl.CertificationStorageServiceImpl;
-import io.lighty.modules.gnmi.connector.configuration.SessionConfiguration;
-import io.lighty.modules.gnmi.connector.gnmi.session.impl.GnmiSessionFactoryImpl;
-import io.lighty.modules.gnmi.connector.security.GnmiCallCredentials;
-import io.lighty.modules.gnmi.connector.session.SessionManagerFactory;
-import io.lighty.modules.gnmi.connector.session.SessionManagerImpl;
-import io.lighty.modules.gnmi.connector.session.api.SessionProviderImpl;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.security.InvalidAlgorithmParameterException;
-import java.security.InvalidKeyException;
-import java.security.NoSuchAlgorithmException;
-import java.security.spec.InvalidKeySpecException;
-import java.security.spec.KeySpec;
+import java.nio.file.Path;
+import java.security.GeneralSecurityException;
 import java.util.Base64;
 import java.util.Optional;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
-import javax.crypto.NoSuchPaddingException;
-import javax.crypto.SecretKey;
-import javax.crypto.SecretKeyFactory;
-import javax.crypto.spec.GCMParameterSpec;
-import javax.crypto.spec.PBEKeySpec;
-import javax.crypto.spec.SecretKeySpec;
-import javax.xml.bind.DatatypeConverter;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
-import org.mockito.MockitoAnnotations;
+import org.mockito.Mock;
 import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.opendaylight.aaa.encrypt.AAAEncryptionService;
+import org.opendaylight.gnmi.southbound.device.connection.DeviceConnection;
+import org.opendaylight.gnmi.southbound.device.connection.DeviceConnectionInitializer;
+import org.opendaylight.gnmi.southbound.device.session.security.KeystoreGnmiSecurityProvider;
+import org.opendaylight.gnmi.southbound.schema.certstore.impl.CertificationStorageServiceImpl;
+import org.opendaylight.mdsal.binding.api.DataBroker;
 import org.opendaylight.mdsal.binding.api.ReadTransaction;
 import org.opendaylight.mdsal.binding.api.WriteTransaction;
-import org.opendaylight.mdsal.binding.dom.adapter.BindingDOMDataBrokerAdapter;
 import org.opendaylight.mdsal.common.api.CommitInfo;
 import org.opendaylight.mdsal.common.api.LogicalDatastoreType;
-import org.opendaylight.yang.gen.v1.config.aaa.authn.encrypt.service.config.rev240202.AaaEncryptServiceConfig;
-import org.opendaylight.yang.gen.v1.config.aaa.authn.encrypt.service.config.rev240202.AaaEncryptServiceConfigBuilder;
+import org.opendaylight.modules.gnmi.connector.configuration.SessionConfiguration;
+import org.opendaylight.modules.gnmi.connector.gnmi.session.impl.GnmiSessionFactoryImpl;
+import org.opendaylight.modules.gnmi.connector.security.GnmiCallCredentials;
+import org.opendaylight.modules.gnmi.connector.session.SessionManagerFactory;
+import org.opendaylight.modules.gnmi.connector.session.SessionManagerImpl;
+import org.opendaylight.modules.gnmi.connector.session.api.SessionProviderImpl;
 import org.opendaylight.yang.gen.v1.urn.ietf.params.xml.ns.yang.ietf.inet.types.rev130715.Host;
 import org.opendaylight.yang.gen.v1.urn.ietf.params.xml.ns.yang.ietf.inet.types.rev130715.IpAddress;
 import org.opendaylight.yang.gen.v1.urn.ietf.params.xml.ns.yang.ietf.inet.types.rev130715.Ipv4Address;
@@ -89,6 +79,7 @@ import org.opendaylight.yangtools.binding.DataObject;
 import org.opendaylight.yangtools.yang.binding.InstanceIdentifier;
 import org.opendaylight.yangtools.yang.common.Uint16;
 
+@ExtendWith(MockitoExtension.class)
 public class KeystoreGnmiSecurityTest {
 
     private static final String KEYSTORE_PASSPHRASE_ID_1 = "KeystoreID_1";
@@ -99,7 +90,9 @@ public class KeystoreGnmiSecurityTest {
     private static final String TEST_PASSWORD = "Test_Password";
     private static final String ADDRESS = "127.0.0.1";
 
-    private static final AAAEncryptionServiceImpl AAA_ENCRYPTION_SERVICE = createEncryptionServiceWithErrorHandling();
+    @Mock
+    private AAAEncryptionService aaaEncryptionService;
+
     private static final String CA_CRT = "/certs/ca.crt";
     private static final String CLIENT_ENCRYPTED_CRT = "/certs/client.encrypted.crt";
     private static final String CLIENT_ENCRYPTED_KEY = "/certs/client.encrypted.key";
@@ -112,54 +105,56 @@ public class KeystoreGnmiSecurityTest {
     private GnmiSessionFactoryImpl gnmiSessionFactorySpy;
 
     @BeforeEach
-    public void setup() {
-        MockitoAnnotations.initMocks(this);
-        final BindingDOMDataBrokerAdapter dataBrokerMock = mock(BindingDOMDataBrokerAdapter.class);
+    public void setup() throws GeneralSecurityException {
+        lenient().when(aaaEncryptionService.encrypt(any(byte[].class)))
+            .thenAnswer(invocation -> invocation.getArgument(0));
+        lenient().when(aaaEncryptionService.decrypt(any(byte[].class)))
+            .thenAnswer(invocation -> invocation.getArgument(0));
+
+        final DataBroker dataBrokerMock = mock(DataBroker.class);
         final WriteTransaction wtxMock = mock(WriteTransaction.class);
         final ReadTransaction rtxMock = mock(ReadTransaction.class);
 
-        when(dataBrokerMock.newWriteOnlyTransaction())
-                .thenAnswer(invocation -> wtxMock);
-        when(dataBrokerMock.newReadOnlyTransaction())
-                .thenAnswer(invocation -> rtxMock);
-        when(wtxMock.commit())
-                .thenAnswer(invocation -> CommitInfo.emptyFluentFuture());
+        lenient().when(dataBrokerMock.newWriteOnlyTransaction()).thenReturn(wtxMock);
+        lenient().when(dataBrokerMock.newReadOnlyTransaction()).thenReturn(rtxMock);
+
+        lenient().doReturn(FluentFuture.from(Futures.immediateFuture(CommitInfo.empty())))
+            .when(wtxMock).commit();
 
         final CertificationStorageServiceImpl certificationStorageService
-                = new CertificationStorageServiceImpl(AAA_ENCRYPTION_SERVICE, dataBrokerMock);
+            = new CertificationStorageServiceImpl(aaaEncryptionService, dataBrokerMock);
         final KeystoreGnmiSecurityProvider securityProvider
-                = new KeystoreGnmiSecurityProvider(certificationStorageService);
+            = new KeystoreGnmiSecurityProvider(certificationStorageService);
 
         final ExecutorService gnmiExecutorService = Executors.newCachedThreadPool();
 
-//      FIXME: refactor SessionManagerFactory & close code-base to easy test security with real instances
-//        connectionInitializer = new DeviceConnectionInitializer(securityProvider,
-//                new SessionManagerFactoryImpl(gnmiSessionFactorySpy), dataBrokerMock, gnmiExecutorService);
         final SessionManagerFactory sessionManagerFactoryMock = mock(SessionManagerFactory.class);
         final SessionManagerImpl sessionManagerMock = mock(SessionManagerImpl.class);
+
         when(sessionManagerMock.createSession(any()))
-                .thenAnswer(invocation1 -> {
-                    final SessionConfiguration sessionConfig = invocation1.getArgument(0);
-                    final SessionProviderImpl sessionProviderSpy =
-                            new SessionProviderImpl(sessionConfig, sessionManagerMock, mock(ManagedChannel.class),
-                                    gnmiSessionFactorySpy.createGnmiSession(sessionConfig, mock(ManagedChannel.class)));
+            .thenAnswer(invocation1 -> {
+                final SessionConfiguration sessionConfig = invocation1.getArgument(0);
 
-                    when(sessionProviderSpy.getChannelState())
-                            .thenAnswer(invocation2 -> ConnectivityState.READY);
+                ManagedChannel channelMock = mock(ManagedChannel.class);
+                lenient().when(channelMock.getState(any(Boolean.class))).thenReturn(ConnectivityState.READY);
 
-                    return sessionProviderSpy;
-                });
-        when(sessionManagerFactoryMock.createSessionManager(any()))
-                .thenAnswer(invocation -> sessionManagerMock);
+                return new SessionProviderImpl(
+                    sessionConfig,
+                    sessionManagerMock,
+                    channelMock,
+                    gnmiSessionFactorySpy.createGnmiSession(sessionConfig, channelMock)
+                );
+            });
 
+        when(sessionManagerFactoryMock.createSessionManager(any())).thenReturn(sessionManagerMock);
 
         connectionInitializer = new DeviceConnectionInitializer(securityProvider,
-                sessionManagerFactoryMock, dataBrokerMock, gnmiExecutorService);
+            sessionManagerFactoryMock, dataBrokerMock, gnmiExecutorService);
 
-        when(rtxMock.read(eq(LogicalDatastoreType.OPERATIONAL), eq(getKeystore1Identifier())))
-                .thenAnswer(in -> getReadResult(getKeystore1WithPassResponse()));
-        when(rtxMock.read(eq(LogicalDatastoreType.OPERATIONAL), eq(getKeystore2Identifier())))
-                .thenAnswer(in -> getReadResult(getKeystore2Response()));
+        lenient().when(rtxMock.read(eq(LogicalDatastoreType.OPERATIONAL), eq(getKeystore1Identifier())))
+            .thenAnswer(in -> getReadResult(getKeystore1WithPassResponse()));
+        lenient().when(rtxMock.read(eq(LogicalDatastoreType.OPERATIONAL), eq(getKeystore2Identifier())))
+            .thenAnswer(in -> getReadResult(getKeystore2Response()));
     }
 
     @AfterEach
@@ -175,7 +170,7 @@ public class KeystoreGnmiSecurityTest {
         deviceInitializerDevicesConnecting(node);
 
         final ArgumentCaptor<SessionConfiguration> sessionConfigCaptor
-                = ArgumentCaptor.forClass(SessionConfiguration.class);
+            = ArgumentCaptor.forClass(SessionConfiguration.class);
         verify(gnmiSessionFactorySpy).createGnmiSession(sessionConfigCaptor.capture(), any(ManagedChannel.class));
 
         Assertions.assertEquals(1, sessionConfigCaptor.getAllValues().size());
@@ -186,7 +181,6 @@ public class KeystoreGnmiSecurityTest {
         Assertions.assertEquals(PORT, capturedConfiguration.getAddress().getPort());
         Assertions.assertNull(capturedConfiguration.getPassword());
         Assertions.assertNull(capturedConfiguration.getUsername());
-
     }
 
     @Test
@@ -195,7 +189,7 @@ public class KeystoreGnmiSecurityTest {
         deviceInitializerDevicesConnecting(node);
 
         final ArgumentCaptor<SessionConfiguration> sessionConfigCaptor
-                = ArgumentCaptor.forClass(SessionConfiguration.class);
+            = ArgumentCaptor.forClass(SessionConfiguration.class);
         verify(gnmiSessionFactorySpy).createGnmiSession(sessionConfigCaptor.capture(), any(ManagedChannel.class));
 
         Assertions.assertEquals(1, sessionConfigCaptor.getAllValues().size());
@@ -214,7 +208,7 @@ public class KeystoreGnmiSecurityTest {
         deviceInitializerDevicesConnecting(node);
 
         final ArgumentCaptor<SessionConfiguration> sessionConfigCaptor
-                = ArgumentCaptor.forClass(SessionConfiguration.class);
+            = ArgumentCaptor.forClass(SessionConfiguration.class);
         verify(gnmiSessionFactorySpy).createGnmiSession(sessionConfigCaptor.capture(), any(ManagedChannel.class));
 
         Assertions.assertEquals(1, sessionConfigCaptor.getAllValues().size());
@@ -233,7 +227,7 @@ public class KeystoreGnmiSecurityTest {
         deviceInitializerDevicesConnecting(node);
 
         final ArgumentCaptor<SessionConfiguration> sessionConfigCaptor
-                = ArgumentCaptor.forClass(SessionConfiguration.class);
+            = ArgumentCaptor.forClass(SessionConfiguration.class);
         verify(gnmiSessionFactorySpy).createGnmiSession(sessionConfigCaptor.capture(), any(ManagedChannel.class));
 
         Assertions.assertEquals(1, sessionConfigCaptor.getAllValues().size());
@@ -252,12 +246,12 @@ public class KeystoreGnmiSecurityTest {
         deviceInitializerDevicesConnecting(node);
 
         verify(gnmiSessionFactorySpy, times(1))
-                .createGnmiSession(any(ManagedChannel.class), any(GnmiCallCredentials.class));
+            .createGnmiSession(any(ManagedChannel.class), any(GnmiCallCredentials.class));
         verify(gnmiSessionFactorySpy, times(0))
-                .createGnmiSession(any(ManagedChannel.class));
+            .createGnmiSession(any(ManagedChannel.class));
 
         final ArgumentCaptor<SessionConfiguration> sessionConfigCaptor
-                = ArgumentCaptor.forClass(SessionConfiguration.class);
+            = ArgumentCaptor.forClass(SessionConfiguration.class);
         verify(gnmiSessionFactorySpy).createGnmiSession(sessionConfigCaptor.capture(), any(ManagedChannel.class));
 
         Assertions.assertEquals(1, sessionConfigCaptor.getAllValues().size());
@@ -276,12 +270,12 @@ public class KeystoreGnmiSecurityTest {
         deviceInitializerDevicesConnecting(node);
 
         verify(gnmiSessionFactorySpy, times(1))
-                .createGnmiSession(any(ManagedChannel.class), any(GnmiCallCredentials.class));
+            .createGnmiSession(any(ManagedChannel.class), any(GnmiCallCredentials.class));
         verify(gnmiSessionFactorySpy, times(0))
-                .createGnmiSession(any(ManagedChannel.class));
+            .createGnmiSession(any(ManagedChannel.class));
 
         final ArgumentCaptor<SessionConfiguration> sessionConfigCaptor
-                = ArgumentCaptor.forClass(SessionConfiguration.class);
+            = ArgumentCaptor.forClass(SessionConfiguration.class);
         verify(gnmiSessionFactorySpy).createGnmiSession(sessionConfigCaptor.capture(), any(ManagedChannel.class));
 
         Assertions.assertEquals(1, sessionConfigCaptor.getAllValues().size());
@@ -297,16 +291,16 @@ public class KeystoreGnmiSecurityTest {
     @Test
     public void testCertificateWithPassphraseWithBasiAuth() throws Exception {
         final Node node
-                = createNode(TEST_NODE, PORT, getTlsSecurityChoice(KEYSTORE_PASSPHRASE_ID_1), getTestCredentials());
+            = createNode(TEST_NODE, PORT, getTlsSecurityChoice(KEYSTORE_PASSPHRASE_ID_1), getTestCredentials());
         deviceInitializerDevicesConnecting(node);
 
         verify(gnmiSessionFactorySpy, times(1))
-                .createGnmiSession(any(ManagedChannel.class), any(GnmiCallCredentials.class));
+            .createGnmiSession(any(ManagedChannel.class), any(GnmiCallCredentials.class));
         verify(gnmiSessionFactorySpy, times(0))
-                .createGnmiSession(any(ManagedChannel.class));
+            .createGnmiSession(any(ManagedChannel.class));
 
         final ArgumentCaptor<SessionConfiguration> sessionConfigCaptor
-                = ArgumentCaptor.forClass(SessionConfiguration.class);
+            = ArgumentCaptor.forClass(SessionConfiguration.class);
         verify(gnmiSessionFactorySpy).createGnmiSession(sessionConfigCaptor.capture(), any(ManagedChannel.class));
 
         Assertions.assertEquals(1, sessionConfigCaptor.getAllValues().size());
@@ -325,13 +319,13 @@ public class KeystoreGnmiSecurityTest {
         deviceInitializerDevicesConnecting(node);
 
         final ArgumentCaptor<SessionConfiguration> sessionConfigCaptor
-                = ArgumentCaptor.forClass(SessionConfiguration.class);
+            = ArgumentCaptor.forClass(SessionConfiguration.class);
         verify(gnmiSessionFactorySpy).createGnmiSession(sessionConfigCaptor.capture(), any(ManagedChannel.class));
         verify(gnmiSessionFactorySpy, times(1))
-                .createGnmiSession(any(ManagedChannel.class), any(GnmiCallCredentials.class));
+            .createGnmiSession(any(ManagedChannel.class), any(GnmiCallCredentials.class));
 
         verify(gnmiSessionFactorySpy, times(0))
-                .createGnmiSession(any(ManagedChannel.class));
+            .createGnmiSession(any(ManagedChannel.class));
 
         Assertions.assertEquals(1, sessionConfigCaptor.getAllValues().size());
         SessionConfiguration capturedConfiguration = sessionConfigCaptor.getValue();
@@ -355,20 +349,20 @@ public class KeystoreGnmiSecurityTest {
 
     private static SecurityChoice getInsecureSecurityChoice() {
         return new InsecureDebugOnlyBuilder()
-                .setConnectionType(InsecureDebugOnly.ConnectionType.INSECURE)
-                .build();
+            .setConnectionType(InsecureDebugOnly.ConnectionType.INSECURE)
+            .build();
     }
 
     private static SecurityChoice getNoTlsSecurityChoice() {
         return new InsecureDebugOnlyBuilder()
-                .setConnectionType(InsecureDebugOnly.ConnectionType.PLAINTEXT)
-                .build();
+            .setConnectionType(InsecureDebugOnly.ConnectionType.PLAINTEXT)
+            .build();
     }
 
     private static SecurityChoice getTlsSecurityChoice(String keystoreId) {
         return new SecureBuilder()
-                .setKeystoreId(keystoreId)
-                .build();
+            .setKeystoreId(keystoreId)
+            .build();
     }
 
     private static Node createNode(final String nameOfNode, final int port, final SecurityChoice securityChoice) {
@@ -376,61 +370,63 @@ public class KeystoreGnmiSecurityTest {
     }
 
     static Node createNode(final String nameOfNode, final int port, final SecurityChoice securityChoice,
-                           final Credentials credentials) {
+        final Credentials credentials) {
         ConnectionParametersBuilder connectionParametersBuilder = new ConnectionParametersBuilder()
-                .setHost(new Host(new IpAddress(Ipv4Address.getDefaultInstance(ADDRESS))))
-                .setPort(new PortNumber(Uint16.valueOf(port)))
-                .setSecurityChoice(securityChoice);
+            .setHost(new Host(new IpAddress(new Ipv4Address(ADDRESS))))
+            .setPort(new PortNumber(Uint16.valueOf(port)))
+            .setSecurityChoice(securityChoice);
 
         if (credentials != null) {
             connectionParametersBuilder.setCredentials(credentials);
         }
 
         return new NodeBuilder()
-                .setNodeId(new NodeId(nameOfNode))
-                .addAugmentation(new GnmiNodeBuilder()
-                        .setConnectionParameters(connectionParametersBuilder.build())
-                        .build())
-                .build();
+            .setNodeId(new NodeId(nameOfNode))
+            .addAugmentation(new GnmiNodeBuilder()
+                .setConnectionParameters(connectionParametersBuilder.build())
+                .build())
+            .build();
     }
 
     private static Credentials getTestCredentials() {
         return new CredentialsBuilder()
-                .setPassword(TEST_USERNAME)
-                .setUsername(TEST_PASSWORD)
-                .build();
+            .setPassword(TEST_USERNAME)
+            .setUsername(TEST_PASSWORD)
+            .build();
     }
 
     private static InstanceIdentifier<Keystore> getKeystore1Identifier() {
         return InstanceIdentifier
-                .builder(Keystore.class, new KeystoreKey(KEYSTORE_PASSPHRASE_ID_1))
-                .build();
+            .builder(Keystore.class, new KeystoreKey(KEYSTORE_PASSPHRASE_ID_1))
+            .build();
     }
 
     private static InstanceIdentifier<Keystore> getKeystore2Identifier() {
         return InstanceIdentifier
-                .builder(Keystore.class, new KeystoreKey(KEYSTORE_ID_2))
-                .build();
+            .builder(Keystore.class, new KeystoreKey(KEYSTORE_ID_2))
+            .build();
     }
 
-    private static Keystore getKeystore1WithPassResponse() {
+    private Keystore getKeystore1WithPassResponse() throws GeneralSecurityException {
+        // Use java.util.Base64 instead of javax.xml.bind.DatatypeConverter
         return new KeystoreBuilder()
-                .setCaCertificate(getResource(CA_CRT))
-                .setClientCert(getResource(CLIENT_ENCRYPTED_CRT))
-                .setClientKey(DatatypeConverter.printBase64Binary(
-                        (AAA_ENCRYPTION_SERVICE.encrypt(getResource(CLIENT_ENCRYPTED_KEY).getBytes(
-                                Charset.defaultCharset())))))
-                .setPassphrase(
-                        DatatypeConverter.printBase64Binary(AAA_ENCRYPTION_SERVICE.encrypt(PASSPHRASE.getBytes())))
-                .setKeystoreId(KEYSTORE_PASSPHRASE_ID_1)
-                .build();
+            .setCaCertificate(getResource(CA_CRT))
+            .setClientCert(getResource(CLIENT_ENCRYPTED_CRT))
+            .setClientKey(Base64.getEncoder().encodeToString(
+                (aaaEncryptionService.encrypt(getResource(CLIENT_ENCRYPTED_KEY).getBytes(
+                    Charset.defaultCharset())))))
+            .setPassphrase(
+                Base64.getEncoder().encodeToString(aaaEncryptionService.encrypt(PASSPHRASE.getBytes())))
+            .setKeystoreId(KEYSTORE_PASSPHRASE_ID_1)
+            .build();
     }
 
-    private static Keystore getKeystore2Response() {
+    private Keystore getKeystore2Response() throws GeneralSecurityException {
+        // Use java.util.Base64 instead of javax.xml.bind.DatatypeConverter
         return new KeystoreBuilder().setCaCertificate(getResource(CA_CRT)).setClientCert(getResource(CLIENT_CRT))
-                .setClientKey(DatatypeConverter.printBase64Binary(
-                        (AAA_ENCRYPTION_SERVICE.encrypt((getResource(CLIENT_KEY).getBytes())))))
-                .setKeystoreId(KEYSTORE_ID_2).build();
+            .setClientKey(Base64.getEncoder().encodeToString(
+                (aaaEncryptionService.encrypt((getResource(CLIENT_KEY).getBytes())))))
+            .setKeystoreId(KEYSTORE_ID_2).build();
     }
 
     private static <T extends DataObject> FluentFuture<Optional<T>> getReadResult(T data) {
@@ -439,41 +435,10 @@ public class KeystoreGnmiSecurityTest {
 
     private static String getResource(String path) {
         try {
-            byte[] bytes = Files.readAllBytes(Paths.get(SessionInitializeTest.class.getResource(path).toURI()));
+            byte[] bytes = Files.readAllBytes(Path.of(SessionInitializeTest.class.getResource(path).toURI()));
             return new String(bytes);
         } catch (IOException | URISyntaxException e) {
             throw new RuntimeException(String.format("Failed to read resources at path [%s]", path), e);
         }
-    }
-
-    private static AAAEncryptionServiceImpl createEncryptionServiceWithErrorHandling() {
-        try {
-            return createEncryptionService();
-        } catch (NoSuchPaddingException | NoSuchAlgorithmException | InvalidKeySpecException
-                | InvalidAlgorithmParameterException | InvalidKeyException e) {
-            throw new RuntimeException("Failed to create encryption service", e);
-        }
-    }
-
-    private static AAAEncryptionServiceImpl createEncryptionService() throws NoSuchPaddingException,
-            NoSuchAlgorithmException, InvalidKeySpecException, InvalidAlgorithmParameterException, InvalidKeyException {
-        final AaaEncryptServiceConfig encrySrvConfig = getDefaultAaaEncryptServiceConfig();
-        final byte[] encryptionKeySalt = Base64.getDecoder().decode(encrySrvConfig.getEncryptSalt());
-        final SecretKeyFactory keyFactory = SecretKeyFactory.getInstance(encrySrvConfig.getEncryptMethod());
-        final KeySpec keySpec = new PBEKeySpec(encrySrvConfig.getEncryptKey().toCharArray(), encryptionKeySalt,
-                encrySrvConfig.getEncryptIterationCount(), encrySrvConfig.getEncryptKeyLength());
-        final SecretKey key = new SecretKeySpec(keyFactory.generateSecret(keySpec).getEncoded(),
-                encrySrvConfig.getEncryptType());
-        final GCMParameterSpec ivParameterSpec = new GCMParameterSpec(encrySrvConfig.getAuthTagLength(),
-                encryptionKeySalt);
-        return new AAAEncryptionServiceImpl(ivParameterSpec, encrySrvConfig.getCipherTransforms(), key);
-    }
-
-    private static AaaEncryptServiceConfig getDefaultAaaEncryptServiceConfig() {
-        return new AaaEncryptServiceConfigBuilder().setEncryptKey("V1S1ED4OMeEh")
-                .setPasswordLength(12).setEncryptSalt("TdtWeHbch/7xP52/rp3Usw==")
-                .setEncryptMethod("PBKDF2WithHmacSHA1").setEncryptType("AES")
-                .setEncryptIterationCount(32768).setEncryptKeyLength(128)
-                .setAuthTagLength(128).setCipherTransforms("AES/GCM/NoPadding").build();
     }
 }
