@@ -6,7 +6,7 @@
  * and is available at http://www.eclipse.org/legal/epl-v10.html
  */
 
-package io.lighty.gnmi.southbound.mountpoint.codecs.testcases;
+package org.opendaylight.gnmi.southbound.mountpoint.codecs.testcases;
 
 import com.google.common.collect.Maps;
 import com.google.gson.Gson;
@@ -15,20 +15,19 @@ import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 import com.google.protobuf.ByteString;
 import gnmi.Gnmi;
-import io.lighty.core.controller.impl.config.ConfigurationException;
-import io.lighty.gnmi.southbound.schema.impl.SchemaException;
-import io.lighty.gnmi.southbound.schema.loader.api.YangLoadException;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Map;
 import org.apache.commons.lang3.tuple.ImmutablePair;
+import org.apache.logging.log4j.core.config.ConfigurationException;
+import org.opendaylight.gnmi.southbound.schema.impl.SchemaException;
+import org.opendaylight.gnmi.southbound.schema.loader.api.YangLoadException;
 import org.opendaylight.yangtools.yang.data.api.YangInstanceIdentifier;
 import org.opendaylight.yangtools.yang.data.api.schema.NormalizedNode;
 
 public class YangInstanceNormToGnmiUpdateTestCases extends CodecTestCasesBase {
-    private static final Path BASE_JSON_PATH = Paths.get(
+    private static final Path BASE_JSON_PATH = Path.of(
             "src/test/resources/codecs/jsons/reference_data_prefixed.json");
     private static final Gson GSON = new Gson();
 
